Added windows compatibility fix